# TheCalcIsALie

./: .clang-format  .gitignore  README.md  complex_funcs.cpp  hodnoceni.txt  skutecnost.txt
plan/: xzajic22_xsocha02_xtrutn00_xpuchn02_plan.txt
src/: 01calc.h  CMakeLists.txt  Doxyfile  Makefile  calc.cpp  calc.h  calc.h_old  complx_funcs.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  odevzdani.txt  profiling.cpp  tdd_tests.cpp
src/gui3/: CMakeLists.txt  calc.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/test/: CMakeLists.txt
